@@ -45,7 +45,7 @@ def main():
     args = get_parser().parse_args()
     outfp = open(args.output, 'w')
     for filename in args.input_filenames:
-        for record in screed.open(filename, parse_description=False):
+        for record in screed.open(filename):
             if len(record['sequence']) >= args.length:
                 write_record(record, outfp)
     print('wrote to: ' + args.output, file=sys.stderr)
