@@ -43,8 +43,7 @@ def main():
     print(('fastq from ', args.input_sequence), file=sys.stderr)
 
     n_count = 0
-    for n, record in enumerate(screed.open(args.input_sequence,
-                                           parse_description=False)):
+    for n, record in enumerate(screed.open(args.input_sequence)):
         if n % 10000 == 0:
             print('...', n, file=sys.stderr)
 
